~ use code cleanup to remove extraneous exceptions